[gd_scene format=3 uid="uid://b5ghscv4so712"]

[ext_resource type="Script" uid="uid://be1kbv3c2briu" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://jombi5316xas" path="res://assets/bulby_anim.png" id="2_onrkg"]
[ext_resource type="Script" uid="uid://6mhla35rahy3" path="res://player_animation.gd" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://bhyuoso57wgla" path="res://assets/spark_anim.png" id="3_sweqy"]
[ext_resource type="Script" uid="uid://c1d7lg1r6hlrn" path="res://scripts/hitbox.gd" id="4_1jxqw"]
[ext_resource type="PackedScene" uid="uid://ctcss8iw8igbi" path="res://scenes/player_gun.tscn" id="4_hqtel"]
[ext_resource type="AudioStream" uid="uid://b4q6jje1rgcfc" path="res://assets/sound effects/bulb_getting_damage.ogg" id="7_dmgsnd"]
[ext_resource type="AudioStream" uid="uid://bsqvbv7csi313" path="res://assets/sound effects/swoosh.ogg" id="8_swshsnd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 100.0
height = 440.00003

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sweqy"]
radius = 204.99998
height = 959.99994

[sub_resource type="Animation" id="Animation_onrkg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Player_Gun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(9, -34)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Spark:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1jxqw"]
resource_name = "back_idle_left"
length = 0.70001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Player_Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6, -40), Vector2(-6, -40), Vector2(-6, -41), Vector2(-6, -42), Vector2(-6, -43), Vector2(-6, -42), Vector2(-6, -41), Vector2(-6, -41)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Spark:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player_Gun:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "back_idle_right"
length = 0.70001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Player_Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(6.0000005, -40.000004), Vector2(6.0000005, -40.000004), Vector2(6, -41), Vector2(6, -42), Vector2(6, -43), Vector2(6, -42.000034), Vector2(6, -41.00007), Vector2(6, -41.0001)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Spark:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player_Gun:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dw050"]
resource_name = "back_walk_left"
length = 0.70001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.10162541, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Player_Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-9, -37), Vector2(-9, -36), Vector2(-9, -35), Vector2(-9, -35), Vector2(-9, -36), Vector2(-9, -37), Vector2(-9, -38), Vector2(-9, -38)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Spark:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.10162541, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player_Gun:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "back_walk_right"
length = 0.70001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.10162541, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Player_Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(9, -36), Vector2(9, -36), Vector2(9, -35), Vector2(9, -35), Vector2(9, -36), Vector2(9, -37), Vector2(9, -38), Vector2(9, -38)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Spark:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.10162541, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player_Gun:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "front_idle_left"
length = 0.70001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Player_Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-8, -39), Vector2(-8, -38.000004), Vector2(-8, -38), Vector2(-8, -39), Vector2(-8, -40), Vector2(-8, -41.000004), Vector2(-8, -40), Vector2(-8, -40)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Spark:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player_Gun:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_b26j0"]
resource_name = "front_idle_right"
length = 0.70001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Player_Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(8, -39), Vector2(8, -38.000004), Vector2(8, -38.000004), Vector2(8, -39), Vector2(8, -40.000004), Vector2(8, -41), Vector2(8, -40.000004), Vector2(8, -40.000004)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Spark:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player_Gun:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "front_walk_left"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Player_Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-9, -36), Vector2(-9.000001, -35.000004), Vector2(-9, -35.000004), Vector2(-9.000001, -36), Vector2(-9.000001, -37.000004), Vector2(-9.000001, -38), Vector2(-9.000001, -37.000004), Vector2(-9, -37.000004)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Spark:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player_Gun:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_n7ghd"]
resource_name = "front_walk_right"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Player_Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(9, -36), Vector2(9.000001, -35.000004), Vector2(9.000001, -35.16667), Vector2(9, -36.33334), Vector2(9.000001, -37.25), Vector2(9, -37.83333), Vector2(9, -36.916668), Vector2(9.000001, -37.000004)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spark:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Spark:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Player_Gun:show_behind_parent")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqtel"]
_data = {
&"RESET": SubResource("Animation_onrkg"),
&"back_idle_left": SubResource("Animation_1jxqw"),
&"back_idle_right": SubResource("Animation_sweqy"),
&"back_walk_left": SubResource("Animation_dw050"),
&"back_walk_right": SubResource("Animation_hqtel"),
&"front_idle_left": SubResource("Animation_2hs0m"),
&"front_idle_right": SubResource("Animation_b26j0"),
&"front_walk_left": SubResource("Animation_i3pqv"),
&"front_walk_right": SubResource("Animation_n7ghd")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3pqv"]
animation = &"front_idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hqtel"]
animation = &"front_idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sweqy"]
animation = &"back_idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2hs0m"]
animation = &"back_idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1jxqw"]
blend_point_0/node = SubResource("AnimationNodeAnimation_i3pqv")
blend_point_0/pos = Vector2(1, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_hqtel")
blend_point_1/pos = Vector2(-1, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_sweqy")
blend_point_2/pos = Vector2(-1, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_2hs0m")
blend_point_3/pos = Vector2(1, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dw050"]
animation = &"front_walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b26j0"]
animation = &"front_walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n7ghd"]
animation = &"back_walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nvl01"]
animation = &"back_walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ivps1"]
blend_point_0/node = SubResource("AnimationNodeAnimation_dw050")
blend_point_0/pos = Vector2(-1, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_b26j0")
blend_point_1/pos = Vector2(1, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_n7ghd")
blend_point_2/pos = Vector2(-1, -0.90000004)
blend_point_3/node = SubResource("AnimationNodeAnimation_nvl01")
blend_point_3/pos = Vector2(1, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_urp6f"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bwjto"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_606se"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_nvl01"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_1jxqw")
states/Idle/position = Vector2(384.896, 160.4)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_ivps1")
states/Walk/position = Vector2(384.8, 62)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_urp6f"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_bwjto"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_606se")]
graph_offset = Vector2(-105, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_magnet"]
radius = 120.0

[node name="Player" type="CharacterBody2D" unique_id=1427830061]
z_index = 1
collision_layer = 2
collision_mask = 9
script = ExtResource("1_onrkg")
bullet_color = Color(0.37254903, 0.81960785, 0.23137255, 1)

[node name="Sprite" type="Sprite2D" parent="." unique_id=1578415652]
position = Vector2(0, -65.00001)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_onrkg")
hframes = 7
vframes = 4
frame = 1

[node name="Spark" type="Sprite2D" parent="." unique_id=1140112572]
position = Vector2(0, -65)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_sweqy")
flip_h = true
hframes = 7
vframes = 4
frame = 1

[node name="Collision" type="CollisionShape2D" parent="." unique_id=597574920]
position = Vector2(0, -10)
rotation = -1.5707964
scale = Vector2(0.099999994, 0.099999994)
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Hitbox" type="Area2D" parent="." unique_id=224873554]
collision_layer = 2
collision_mask = 16
script = ExtResource("4_1jxqw")

[node name="HitbotShape" type="CollisionShape2D" parent="Hitbox" unique_id=1570145476]
position = Vector2(0.99999994, -72)
scale = Vector2(0.1, 0.1)
shape = SubResource("CapsuleShape2D_sweqy")
debug_color = Color(0.85514, 0.30567697, 0.5337263, 0.41960785)

[node name="Camera2D" type="Camera2D" parent="." unique_id=339522657]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=706805394]
root_node = NodePath("../AnimationTree")
libraries/ = SubResource("AnimationLibrary_hqtel")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=1908535675]
root_node = NodePath(".")
tree_root = SubResource("AnimationNodeStateMachine_nvl01")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/walk = false
parameters/Idle/blend_position = Vector2(-0.62639296, 0.969697)
parameters/Walk/blend_position = Vector2(0.14662755, 0.113636374)

[node name="PlayerAnimation" type="Node2D" parent="." unique_id=1028453322 node_paths=PackedStringArray("animation_tree")]
script = ExtResource("3_i3pqv")
animation_tree = NodePath("../AnimationTree")

[node name="Player_Gun" parent="." unique_id=236789692 instance=ExtResource("4_hqtel")]
position = Vector2(9, -34)
scale = Vector2(0.1, 0.1)

[node name="MagnetArea" type="Area2D" parent="." unique_id=352095257]
collision_layer = 0
collision_mask = 32

[node name="MagnetShape" type="CollisionShape2D" parent="MagnetArea" unique_id=20141699]
shape = SubResource("CircleShape2D_magnet")

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dmgsnd")

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_swshsnd")
